reading auth token from properties